--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
 			<div class="小贝壳网站模板-address">
 				<ul>
-					<li><i class="fa fa-mobile" aria-hidden="true"></i> +11 222 333 4444</li>
+					<li><i class="fa fa-mobile" aria-hidden="true"></i> 1029384756</li>
 					<li><i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:info@example.com"> mail@example.com</a></li>
 				</ul>
 			</div>
@@ -112,7 +112,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<img src="images/3a.jpg" alt="Slider 1" />
 						</div>
 						<div class="col-md-6 content">
-							<h3>Hosting <span>City</span></h3>
+							<h3>EssaySearch <span>City</span></h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur velit ac fringilla fermentum. Nulla sodales, magna eget pharetra feugiat, tellus metus lacinia nunc, nec vulputate purus nisl nec tortor. Mauris sem diam, interdum a euismod vitae, viverra non sapien. </p>
 						</div>
 						<div class="clearfix"> </div>
