--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<img src="images/3a.jpg" alt="Slider 1" />
 						</div>
 						<div class="col-md-6 content">
-							<h3>EssaySearch <span>City</span></h3>
+							<h3>EssaySearch <span>test</span></h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur velit ac fringilla fermentum. Nulla sodales, magna eget pharetra feugiat, tellus metus lacinia nunc, nec vulputate purus nisl nec tortor. Mauris sem diam, interdum a euismod vitae, viverra non sapien. </p>
 						</div>
 						<div class="clearfix"> </div>
