大概把页面整合和修改了一下，主页+登录注册

--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Hosting City a Hosting Category Flat Bootstrap responsive Website Template | Home :: 小贝壳网站模板</title>
+<title>Essay Search</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Hosting City Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+<meta name="keywords" content="" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- bootstrap-css -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
@@ -24,6 +23,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script src="js/jquery-1.11.1.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/SmoothScroll.min.js"></script>
+<script src="js/IndexControl.js"></script>
 <script type="text/javascript">
 	jQuery(document).ready(function($) {
 		$(".scroll").click(function(event){		
@@ -41,10 +41,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- header-top -->
 	<div class="header-top">
 		<div class="container">
-			<div class="小贝壳网站模板-address">
+			<div class="address-title">
 				<ul>
-					<li><i class="fa fa-mobile" aria-hidden="true"></i> 1029384756</li>
-					<li><i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:info@example.com"> mail@example.com</a></li>
+                    <li id="loginButton"><i class="fa" aria-hidden="true"></i> <a href="login.html">登陆</a></li>
+					<li><i class="fa" aria-hidden="true"></i> <a href="registration.html">注册</a></li>
 				</ul>
 			</div>
 			<div class="agileinfo-social-grids">
@@ -61,46 +61,46 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- //header-top -->
 	<!-- header -->
 	<div class="header">
-			<div class="container">
-				<nav class="navbar navbar-default">
-					<!-- Brand and toggle get grouped for better mobile display -->
-					<div class="navbar-header">
-					  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					  </button>
-						<div class="小贝壳网站模板-logo">
-							<h1><a href="index.html">Hosting <span>City</span></a></h1>
-						</div>
+		<div class="container">
+			<nav class="navbar navbar-default">
+				<!-- Brand and toggle get grouped for better mobile display -->
+				<div class="navbar-header">
+				  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				  </button>
+					<div class="logo-style">
+						<h1><a href="index.html">Essay <span>Search</span></a></h1>
 					</div>
+				</div>
+				<!-- Collect the nav links, forms, and other content for toggling -->
+				<div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
+					<nav>
+						<ul class="nav navbar-nav">
+							<li class="active"><a href="index.html">主页</a></li>
+							<li><a href="results.html" class="hvr-sweep-to-bottom">论文</a></li>
+							<li><a href="professor.html" class="hvr-sweep-to-bottom">专家</a></li>
+							<li><a href="subject.html" class="hvr-sweep-to-bottom">学科</a></li>
+							<li><a href="#" class="dropdown-toggle hvr-sweep-to-bottom" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">其他界面<span class="caret"></span></a>
+								<ul class="dropdown-menu">
+									<li><a class="hvr-sweep-to-bottom" href="services.html">Services</a></li>
+									<li><a class="hvr-sweep-to-bottom" href="faq.html">FAQs</a></li>
+									<li><a class="hvr-sweep-to-bottom" href="login.html">Login</a></li>
+									<li><a class="hvr-sweep-to-bottom" href="registration.html">Registration</a></li>
+									<li><a class="hvr-sweep-to-bottom" href="icons.html">Icons</a></li>
+									<li><a class="hvr-sweep-to-bottom" href="typography.html">Typography</a></li>
+									<li><a href="mail.html" class="hvr-sweep-to-bottom">Mail Us</a></li>
+								</ul>
+							</li>
 
-					<!-- Collect the nav links, forms, and other content for toggling -->
-					<div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
-						<nav>
-							<ul class="nav navbar-nav">
-								<li class="active"><a href="index.html">Home</a></li>
-								<li><a href="about.html" class="hvr-sweep-to-bottom">About</a></li>
-								<li><a href="plans.html" class="hvr-sweep-to-bottom">Plans</a></li>
-								<li><a href="#" class="dropdown-toggle hvr-sweep-to-bottom" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages<span class="caret"></span></a>
-									<ul class="dropdown-menu">
-										<li><a class="hvr-sweep-to-bottom" href="services.html">Services</a></li>
-										<li><a class="hvr-sweep-to-bottom" href="faq.html">FAQs</a></li>
-										<li><a class="hvr-sweep-to-bottom" href="login.html">Login</a></li>
-										<li><a class="hvr-sweep-to-bottom" href="registration.html">Registration</a></li>
-										<li><a class="hvr-sweep-to-bottom" href="icons.html">Icons</a></li>
-										<li><a class="hvr-sweep-to-bottom" href="typography.html">Typography</a></li>          
-									</ul>
-								</li>
-								<li><a href="blog.html" class="hvr-sweep-to-bottom">Blog</a></li>
-								<li><a href="mail.html" class="hvr-sweep-to-bottom">Mail Us</a></li>
-							</ul>
-						</nav>
-					</div>
-					<!-- /.navbar-collapse -->
-				</nav>
-			</div>
+						</ul>
+					</nav>
+				</div>
+				<!-- /.navbar-collapse -->
+			</nav>
+		</div>
 	</div>
 	<!-- //header -->
 	<!-- banner -->
@@ -109,31 +109,31 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div id="immersive_slider">
 				  <div class="slide" data-blurred="">
 						<div class="col-md-6 image">
-							<img src="images/3a.jpg" alt="Slider 1" />
+							<img src="images/universeBomb.jpg" alt="Slider 1" />
 						</div>
 						<div class="col-md-6 content">
-							<h3>EssaySearch <span>test</span></h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur velit ac fringilla fermentum. Nulla sodales, magna eget pharetra feugiat, tellus metus lacinia nunc, nec vulputate purus nisl nec tortor. Mauris sem diam, interdum a euismod vitae, viverra non sapien. </p>
+							<h3>宇宙大爆炸与<span>奇点理论</span></h3>
+							<p>正宇宙大爆炸理论(The Big Bang Theory)是现代宇宙学中最有影响的一种学说。它认为,宇宙是由一个致密炽热的奇点于约150亿年前一次大爆炸后膨胀形成的。1927年,比利时天文学家和宇宙学家勒梅特首次提出了宇宙大爆炸假说。1929年,美国天文学家哈勃根据假说提... </p>
 						</div>
 						<div class="clearfix"> </div>
 				  </div>
 				  <div class="slide" data-blurred="">
 						<div class="col-md-6 image">
-							<img src="images/1a.jpg" alt="Slider 1" />
+							<img src="images/cnn.jpg" alt="Slider 1" />
 						</div>
 						<div class="col-md-6 content">
-							<h3>Personal <span>Hosting</span></h3>
-							<p>Donec sagittis, dui sed lobortis convallis, ante eros auctor leo, vel commodo lacus nisl vitae velit. Nulla facilisi. Integer vehicula porta urna, id lacinia nisl semper vel. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. </p>
+							<h3>基于<span>卷积神经网络</span>的手势识别初探</h3>
+							<p>提出一种用于手势识别的新算法,使用卷积神经网络来进行手势的识别.该算法避免了手势复杂的前期预处理,可以直接输入原始的手势图像.卷积神经网络具有局部感知区域、层次结构化、特征抽取和分类过程等特点,在图像识别领域获得广泛的应用.试验结果表明,该方法能识别多种手势,精度较高且复杂度较小,具有很好的鲁棒性,也克服传统算法的诸多固有缺点.</p>
 						</div>
 						<div class="clearfix"> </div>
 				  </div>
 				  <div class="slide" data-blurred="">
 						<div class="col-md-6 image">
-							<img src="images/2a.jpg" alt="Slider 1" />
+							<img src="images/rna.jpg" alt="Slider 1" />
 						</div>
 						<div class="col-md-6 content">
-							<h3>Shared <span>Hosting</span></h3>
-							<p>Aliquam at efficitur odio, et commodo odio. Nulla est lectus, tristique sit amet lorem at, porttitor dapibus nisi. Quisque bibendum sem ut ex pharetra sagittis. Vestibulum eu sapien non purus interdum tempus. Aenean varius elit sit amet lorem ultrices, at iaculis velit sodales. </p>
+							<h3><span>长链非编码RNA</span>的研究策略</h3>
+							<p>长链非编码RNAs是基因表达的重要调控子。Chr9p21.3位点的长链非编码RNA ANRIL广泛参与肿瘤、冠心病及2型糖尿病等多种疾病的发生和发展。ANRIL的多种同工型具有组织特异性。ANRIL主要以多梳蛋白通路发挥作用,同时也存在其他下游靶点。每种同工型的作用机制和下游的多种通路是目前研究的热点。 </p>
 						</div>
 						<div class="clearfix"> </div>
 				  </div>
@@ -154,35 +154,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- //banner -->
 	<div class="domain">
 		<div class="container">
-			<form class="search-form domain-search" action="#" method="post">
+			<form class="search-form domain-search" action="results.html" method="get">
 				<div class="two-fifth column first">
-					<h2>search your <span>domain</span></h2>
+					<h2>文献检索</h2>
 				</div>
 				<div class="three-fifth column first">
-					<input type="text" class="text" name="Name" placeholder="Enter your domain name" required="">               
+					<input type="text" class="text" name="searchInfo" placeholder="输入关键词进行查询" required="">
 				</div>
 				<div class="one-fifth column">
 					<span class="selection-box">
-						<select class="domains valid" name="domains">
-							<option>Year (0-1 Year)</option>
-							<option>Year (0-2 Year)</option>
-							<option>Year (0-4 Year)</option>
-							<option>Year (0-8 Year)</option>
+						<select class="select-type" name="searchingType">
+							<option value="keyword">关键词</option>
+							<option value="title">篇名</option>
+							<option value="author">作者</option>
+							<option value="subject">学科</option>
 						</select>
 					</span>
 				</div>
 				<div class="one-fifth column">
-					<span class="selection-box">
-						<select class="domains valid" name="domains">
-							<option>.com</option>
-							<option>.info</option>
-							<option>.net</option>
-							<option>.org</option>
-						</select>
-					</span>
-				</div>
-				<div class="one-fifth column">
-					<input type="submit" value="Search">
+					<input type="submit" value="检索">
 				</div>
 				<div class="clearfix"> </div>
 			</form>
@@ -192,20 +182,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="banner-bottom">
 		<div class="container">
 			<div class="w3-banner-bottom-heading">
-				<h3>What <span>We Do?</span></h3>
+				<h3>我们 <span>做什么？</span></h3>
 			</div>
 			<div class="agileits-banner-bottom">
 				<div class="col-md-3 agileits-banner-bottom-grid">
 					<div class="services-grid1">
 						<div class="services-grid-right agile-services-grid-right">
 							<div class="services-grid-right-grid hvr-radial-out blue-grid">
-								<span class="glyphicon glyphicon-grain" aria-hidden="true"></span>
+								<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
 							</div>
 						</div>
 						<div class="services-grid-left agile-services-grid-left">
-							<h4>repreh qui in ea voluptate</h4>
-							<p>Itaque earum rerum hic tenetur a sapiente 
-							delectus, ut aut reiciendis voluptatibus maiores alias</p>
+							<h4>文献检索</h4>
+							<p>我们拥有大量数据库，通过多种途径，提供全面的论文检索服务</p>
 						</div>
 					</div>
 				</div>
@@ -213,13 +202,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="services-grid1">
 						<div class="services-grid-right agile-services-grid-right">
 							<div class="services-grid-right-grid hvr-radial-out orange-grid">
-								<span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+								<span class="glyphicon glyphicon-user" aria-hidden="true"></span>
 							</div>
 						</div>
 						<div class="services-grid-left agile-services-grid-left">
-							<h4>repreh qui in ea voluptate</h4>
-							<p>Itaque earum rerum hic tenetur a sapiente 
-							delectus, ut aut reiciendis voluptatibus maiores alias</p>
+							<h4>专家查询</h4>
+							<p>我们提供专家查询功能，让每一位用户都能了解并查询自己喜爱的专家</p>
 						</div>
 					</div>
 				</div>
@@ -227,13 +215,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="services-grid1">
 						<div class="services-grid-right agile-services-grid-right">
 							<div class="services-grid-right-grid hvr-radial-out green-grid">
-								<span class="glyphicon glyphicon-magnet" aria-hidden="true"></span>
+								<span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
 							</div>
 						</div>
 						<div class="services-grid-left agile-services-grid-left">
-							<h4>repreh qui in ea voluptate</h4>
-							<p>Itaque earum rerum hic tenetur a sapiente 
-							delectus, ut aut reiciendis voluptatibus maiores alias</p>
+							<h4>论文交易</h4>
+							<p>我们提供了完整的论文交易平台，我们希望能让每一位论文发布者和论文引用者同时受益</p>
 						</div>
 					</div>
 				</div>
@@ -245,9 +232,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 						</div>
 						<div class="services-grid-left agile-services-grid-left">
-							<h4>repreh qui in ea voluptate</h4>
-							<p>Itaque earum rerum hic tenetur a sapiente 
-							delectus, ut aut reiciendis voluptatibus maiores alias</p>
+							<h4>学科统计</h4>
+							<p>我们提供了学科统计功能，让每一位用户都能了解每一门学科在如今社会下的发展趋势</p>
 						</div>
 					</div>
 				</div>
@@ -285,7 +271,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<p class="text"><span>24/7</span> Unlimited Support</p>
 								</div>
 								<div class="buy-button">
-									<a href="plans.html">Read More</a>
+									<a href="subject.html">Read More</a>
 								</div>
 							</div>
 						</div>
@@ -310,7 +296,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<p class="text"><span>24/7</span> Unlimited Support</p>
 								</div>
 								<div class="buy-button">
-									<a href="plans.html">Read More</a>
+									<a href="subject.html">Read More</a>
 								</div>
 							</div>
 						</div>
@@ -335,7 +321,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<p class="text"><span>24/7</span> Unlimited Support</p>
 								</div>
 								<div class="buy-button">
-									<a href="plans.html">Read More</a>
+									<a href="subject.html">Read More</a>
 								</div>
 							</div>
 						</div>
@@ -360,7 +346,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<p class="text"><span>24/7</span> Unlimited Support</p>
 								</div>
 								<div class="buy-button">
-									<a href="plans.html">Read More</a>
+									<a href="subject.html">Read More</a>
 								</div>
 							</div>
 						</div>
@@ -385,7 +371,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<p class="text"><span>24/7</span> Unlimited Support</p>
 								</div>
 								<div class="buy-button">
-									<a href="plans.html">Read More</a>
+									<a href="subject.html">Read More</a>
 								</div>
 							</div>
 						</div>
