--- a/faq.html
+++ b/faq.html
@@ -37,7 +37,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- header-top -->
 	<div class="header-top">
 		<div class="container">
-			<div class="小贝壳网站模板-address">
+			<div class="address-title">
 				<ul>
 					<li><i class="fa fa-mobile" aria-hidden="true"></i> +11 222 333 4444</li>
 					<li><i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:info@example.com"> mail@example.com</a></li>
@@ -67,7 +67,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					  </button>
-						<div class="小贝壳网站模板-logo">
+						<div class="logo-style">
 							<h1><a href="index.html">Hosting <span>City</span></a></h1>
 						</div>
 					</div>
@@ -77,8 +77,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<nav>
 							<ul class="nav navbar-nav">
 								<li><a href="index.html" class="hvr-sweep-to-bottom">Home</a></li>
-								<li><a href="about.html" class="hvr-sweep-to-bottom">About</a></li>
-								<li><a href="plans.html" class="hvr-sweep-to-bottom">Plans</a></li>
+								<li><a href="professor.html" class="hvr-sweep-to-bottom">About</a></li>
+								<li><a href="subject.html" class="hvr-sweep-to-bottom">Plans</a></li>
 								<li class="active"><a href="#" class="dropdown-toggle hvr-sweep-to-bottom" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages<span class="caret"></span></a>
 									<ul class="dropdown-menu">
 										<li><a class="hvr-sweep-to-bottom" href="services.html">Services</a></li>
@@ -89,7 +89,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										<li><a class="hvr-sweep-to-bottom" href="typography.html">Typography</a></li>          
 									</ul>
 								</li>
-								<li><a href="blog.html" class="hvr-sweep-to-bottom">Blog</a></li>
+								<li><a href="results.html" class="hvr-sweep-to-bottom">Blog</a></li>
 								<li><a href="mail.html" class="hvr-sweep-to-bottom">Mail Us</a></li>
 							</ul>
 						</nav>
