页面修改，登录状态获取，ajax请求

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <script src="js/jquery-1.11.1.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/SmoothScroll.min.js"></script>
-<script src="js/IndexControl.js"></script>
+<script src="js/checkIfLogin.js"></script>
 <script type="text/javascript">
 	jQuery(document).ready(function($) {
 		$(".scroll").click(function(event){		
@@ -43,8 +43,8 @@
 		<div class="container">
 			<div class="address-title">
 				<ul>
-                    <li id="loginButton"><i class="fa" aria-hidden="true"></i> <a href="login.html">登陆</a></li>
-					<li><i class="fa" aria-hidden="true"></i> <a href="registration.html">注册</a></li>
+                    <li id="loginButton"><i class="fa" aria-hidden="true"></i> <a href="login.html">登录</a></li>
+					<li id="registerButton"><i class="fa" aria-hidden="true"></i> <a href="registration.html">注册</a></li>
 				</ul>
 			</div>
 			<div class="agileinfo-social-grids">
