--- a/login.html
+++ b/login.html
@@ -93,7 +93,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<h3>登录</h3>
 				<div class="login-form">
 					<form id="real-login-form" method="post" onsubmit="return checkLogin()">
-						<input type="email" name="email" placeholder="邮箱" required="">
+						<input type="text" name="username" placeholder="用户名" required="">
 						<input type="password" name="password" placeholder="密码" required="">
 						<div class="tp">
 							<input type="submit" name="login" value="登录">
