--- a/resultpage.html
+++ b/resultpage.html
@@ -39,8 +39,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="container">
         <div class="address-title">
             <ul>
-                <li id="loginButton"><i class="fa" aria-hidden="true"></i> <a href="login.html">登陆</a></li>
-                <li><i class="fa" aria-hidden="true"></i> <a href="registration.html">注册</a></li>
+                <li id="loginButton"><i class="fa" aria-hidden="true"></i> <a href="login.html">登录</a></li>
+                <li id="registerButton"><i class="fa" aria-hidden="true"></i> <a href="registration.html">注册</a></li>
             </ul>
         </div>
         <div class="agileinfo-social-grids">
