--- a/registration.html
+++ b/registration.html
@@ -95,7 +95,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<input type="text" name="username" placeholder="用户名" required="">
 						<input type="password" name="password" placeholder="密码" required="">
 						<input type="password" name="passwordConfirm" placeholder="确认密码" required="">
-						<input type="submit" name="register" value="注册">
+						<button type="button" onclick="checkRegister()">注册</button>
 					</form>
 				</div>
 				<p><a href="login.html"> 已有账号？请登录</a></p>
