修改密码和注销

--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
 		<div class="container">
 			<div class="address-title">
 				<ul>
-                    <li id="loginButton"><i class="fa" aria-hidden="true"></i> <a href="login.html">登录</a></li>
-					<li id="registerButton"><i class="fa" aria-hidden="true"></i> <a href="registration.html">注册</a></li>
+                    <li id="loginButton"><a href="login.html">登录</a></li>
+					<li id="registerButton"><a href="registration.html">注册</a></li>
+					<li id="changePassword" style="display: none"><a href="changepassword.html">&nbsp;&nbsp;&nbsp;&nbsp;修改密码</a></li>
+					<li id="logout" style="display: none"><a href="" onclick="logout()">&nbsp;&nbsp;&nbsp;&nbsp;注销</a></li>
 				</ul>
 			</div>
 			<div class="agileinfo-social-grids">
