--- a/changepassword.html
+++ b/changepassword.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,7 +23,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script src="js/jquery-1.11.1.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/SmoothScroll.min.js"></script>
-<script src="js/register.js"></script>
+<script src="js/renewPassword.js"></script>
 <script type="text/javascript">
 	jQuery(document).ready(function($) {
 		$(".scroll").click(function(event){		
@@ -82,23 +81,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- //header -->
 	<!-- about-heading -->
 	<div class="about-heading">
-		<h2>在 <span>Essay Search</span>上注册</h2>
+		<h2>修改您的<span>密码</span></h2>
 	</div>
 	<!-- //about-heading -->
 	<div class="registration">
 		<div class="container">
 			<div class="signin-form profile">
-				<h3>注册</h3>
+				<h3>修改密码</h3>
 				<div class="login-form">
-					<form method="post" id="real-register-form" action="">
-						<input type="email" name="email" placeholder="邮箱" required="">
-						<input type="text" name="username" placeholder="用户名" required="">
-						<input type="password" name="password" placeholder="密码" required="">
-						<input type="password" name="passwordConfirm" placeholder="确认密码" required="">
-						<button type="button" onclick="checkRegister()">注册</button>
+					<form method="post" id="real-changepasswd-form">
+						<input type="password" name="oldPassword" placeholder="请输入旧密码" required="">
+						<input type="password" name="newPassword" placeholder="新密码" required="">
+						<input type="password" name="newPasswordConfirm" placeholder="确认新密码" required="">
+						<button type="button" onclick="renewPassword()">确认提交</button>
 					</form>
 				</div>
-				<p><a href="login.html"> 已有账号？请登录</a></p>
 			</div>
 		</div>
 	</div>
